--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  /*font-family: 'Poppins', sans-serif;*/
+  font-family: 'Inter', sans-serif;
 }
 
 nav {
@@ -36,4 +37,65 @@ nav {
   letter-spacing: -0.075em;
 
   color: #FFFFFF;
+}
+
+.gray {
+  color: #918E9B;
+}
+
+hr {
+  position: relative;
+  width: 478px;
+  height: 0px;
+  margin-bottom: 25px;
+
+  border: 1px solid #F5F5F5;
+}
+
+.card {
+  font-size: 12px;
+  display: flex;
+}
+
+section {
+  padding: 110px 40px;
+}
+
+.card--image {
+  width: 125px;
+  border-radius: 9px;
+  margin-bottom: 20px;
+}
+
+.card--pin {
+  height: 10px;
+}
+
+.card--text {
+  padding: 20px 20px 40px 20px;
+}
+
+.card--location {
+  text-transform: uppercase;
+  margin-right: 15px;
+  margin-left: 2px;
+  letter-spacing: 0.17em;
+  font-size: 10.24px;
+}
+.card--title {
+  font-size: 25px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.card--date {
+  font-weight: 700;
+  font-size: 10.24px;
+  line-height: 12px;
+}
+.card--descr {
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 15px;
+  width: 326px;
 }
